--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Svelte demo app" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/prism.css" rel="stylesheet" />
-    %sveltekit.head%
-  </head>
-  <body>
-    <div id="svelte">%sveltekit.body%</div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Send a Geeft on Flow" />
+  <link rel="icon" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="/prism.css" rel="stylesheet" />
+  %sveltekit.head%
+</head>
+
+<body>
+  <div id="svelte">%sveltekit.body%</div>
+</body>
+
 </html>
